--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/T_Reservation.styles.css" asp-append-version="true" />
 </head>
-<body style="background-color: #daf0ff;">
+<body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-light" style="background-color: #6980ad;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-dark" style="background-color: #000000;">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">T-Reservation</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,27 +20,27 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Menus" asp-action="Index">Menus</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Menus" asp-action="Index">Menus</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Mesas" asp-action="Index">Mesas</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Mesas" asp-action="Index">Mesas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Index">Iniciar Sesion</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Index">Iniciar Sesion</a>
                         </li>
-                        <li>@(TempData["UsuarioCorreo"] as string)</li>
+                        <li class="text-white">@(TempData["UsuarioCorreo"] as string)</li>
                     </ul>
                 </div>
             </div>
